src/test/ui/derives/issue-36617.rs
#![derive(Copy)] //~ ERROR cannot determine resolution for the attribute macro `derive`

fn main() {}
